Wyklad i cwiczenia z springa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:sqlserver://morfeusz.wszib.edu.pl:1433;databaseName=gjankowi 
 spring.datasource.username=gjankowi 
-spring.datasource.password=fff
+spring.datasource.password=xxx
 spring.jpa.hibernate.ddl-auto=update
